# PokePipeline

./: .gitignore  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  requirements-graphql.txt  test_graphql.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
migrations/: add_enriched_fields.sql
pokepipeline/: __init__.py  cli.py  config.py  logging_setup.py  orchestrator.py
pokepipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pokepipeline/extract/: __init__.py  client.py  models_api.py
pokepipeline/load/: __init__.py  db.py  models_orm.py  repository.py
pokepipeline/quality/: __init__.py  checks.py
pokepipeline/transform/: __init__.py  enrich.py  mapping.py  models_dto.py
scripts/: __init__.py  graphql_min.py
tests/: __init__.py  test_extract_client.py  test_load_repository.py  test_quality_checks.py  test_transform_enrich.py  test_transform_mapping.py
