[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokepipeline"
version = "0.1.0"
description = "Pokemon data pipeline from PokeAPI"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "maryam", email = "maryam.golozar@gmail.com"}]
keywords = ["pipeline", "pokemon", "data", "etl"]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
    "ruff>=0.1.0",
    "black>=23.10.0",
]

[project.scripts]
pokepipeline = "pokepipeline.cli:app"

[tool.setuptools]
packages = ["pokepipeline", "pokepipeline.extract", "pokepipeline.transform", "pokepipeline.load", "pokepipeline.quality"]
package-dir = {"" = "."}


[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

